# tstringlogger

./: README.md  pyproject.toml
src/tstringlogger/: __init__.py
