[project]
name = "tstringlogger"
version = "0.0.1"
description = "Adds support for using t-strings in log messages"
urls = { repository = "https://github.com/pR0Ps/tstringlogger.git" }
readme = "README.md"
license = "LGPL-3.0-only"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
